k8s/aiot/deploy-cloudbeaver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
  namespace: aiot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      containers:
      - env:
        - name: CB_SERVER_NAME
          value: AIoT CloudBeaver
        image: dbeaver/cloudbeaver:24.3.1
        name: cloudbeaver
        ports:
        - containerPort: 8978
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 512Mi
        volumeMounts:
        - mountPath: /opt/cloudbeaver/workspace
          name: cloudbeaver-data
      volumes:
      - name: cloudbeaver-data
        persistentVolumeClaim:
          claimName: cloudbeaver-data
