k8s/aiot/deploy-digital-twin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"digital-twin","namespace":"aiot"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"digital-twin"}},"template":{"metadata":{"labels":{"app":"digital-twin"}},"spec":{"containers":[{"command":["sh","-c","pip install flask kafka-python redis --quiet \u0026\u0026 python /code/twin.py"],"image":"python:3.11-slim","name":"digital-twin","ports":[{"containerPort":8001}],"resources":{"limits":{"cpu":"300m","memory [...]
  creationTimestamp: "2026-03-05T18:43:20Z"
  generation: 1
  name: digital-twin
  namespace: aiot
  resourceVersion: "804745"
  uid: 2a87791f-94e9-4675-a70b-2ae9993dd3f0
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: digital-twin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: digital-twin
    spec:
      containers:
      - command:
        - sh
        - -c
        - pip install flask kafka-python redis --quiet && python /code/twin.py
        image: python:3.11-slim
        imagePullPolicy: IfNotPresent
        name: digital-twin
        ports:
        - containerPort: 8001
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /code
          name: code
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: digital-twin-code
        name: code
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-03-05T18:43:23Z"
    lastUpdateTime: "2026-03-05T18:43:23Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-03-05T18:43:20Z"
    lastUpdateTime: "2026-03-05T18:43:23Z"
    message: ReplicaSet "digital-twin-59f7855dc5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
