k8s/aiot/deploy-pg-sink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "8"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"pg-sink"},"name":"pg-sink","namespace":"aiot"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"pg-sink"}},"template":{"metadata":{"labels":{"app":"pg-sink"}},"spec":{"containers":[{"args":["pip install kafka-python-ng psycopg2-binary --quiet \u0026\u0026 python3 /code/pg_sink.py"],"command":["/bin/sh","-c"],"image":"python:3.11-slim","name":"pg-sink","resources":{"limits":{"cpu":"200m","memory" [...]
  creationTimestamp: "2026-03-05T21:26:26Z"
  generation: 14
  labels:
    app: pg-sink
  name: pg-sink
  namespace: aiot
  resourceVersion: "1418087"
  uid: 6cf06819-fecb-4aa6-8732-08381fa4710b
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pg-sink
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-03-09T07:21:27Z"
      creationTimestamp: null
      labels:
        app: pg-sink
    spec:
      containers:
      - args:
        - pip install kafka-python-ng psycopg2-binary lz4 --quiet && python3 /code/pg_sink.py
        command:
        - /bin/sh
        - -c
        image: python:3.11-slim
        imagePullPolicy: IfNotPresent
        name: pg-sink
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /code
          name: code
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: pg-sink-code
        name: code
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-03-05T21:26:26Z"
    lastUpdateTime: "2026-03-09T07:21:31Z"
    message: ReplicaSet "pg-sink-6ccf8f465f" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-03-09T08:35:37Z"
    lastUpdateTime: "2026-03-09T08:35:37Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 14
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
