k8s/aiot/deploy-pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"pgadmin","namespace":"aiot"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"pgadmin"}},"template":{"metadata":{"labels":{"app":"pgadmin"}},"spec":{"containers":[{"env":[{"name":"PGADMIN_DEFAULT_EMAIL","value":"admin@aiot.com"},{"name":"PGADMIN_DEFAULT_PASSWORD","value":"admin123"},{"name":"PGADMIN_SERVER_JSON_FILE","value":"/pgadmin4/servers/servers.json"}],"image":"dpage/pgadmin4:latest","name":"pgadm [...]
  creationTimestamp: "2026-03-05T16:23:58Z"
  generation: 1
  name: pgadmin
  namespace: aiot
  resourceVersion: "785446"
  uid: 6f05b8f3-9d54-4a16-91a1-c39ac471a2c7
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pgadmin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pgadmin
    spec:
      containers:
      - env:
        - name: PGADMIN_DEFAULT_EMAIL
          value: admin@aiot.com
        - name: PGADMIN_DEFAULT_PASSWORD
          value: admin123
        - name: PGADMIN_SERVER_JSON_FILE
          value: /pgadmin4/servers/servers.json
        image: dpage/pgadmin4:latest
        imagePullPolicy: Always
        name: pgadmin
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 400Mi
          requests:
            cpu: 100m
            memory: 200Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /pgadmin4/servers
          name: servers
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: pgadmin-servers
        name: servers
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-03-05T16:24:00Z"
    lastUpdateTime: "2026-03-05T16:24:00Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-03-05T16:23:58Z"
    lastUpdateTime: "2026-03-05T16:24:00Z"
    message: ReplicaSet "pgadmin-56bcddddb6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
