k8s/aiot/deploy-qdrant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"qdrant","namespace":"aiot"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"qdrant"}},"template":{"metadata":{"labels":{"app":"qdrant"}},"spec":{"containers":[{"image":"qdrant/qdrant:v1.7.4","name":"qdrant","ports":[{"containerPort":6333},{"containerPort":6334}],"resources":{"limits":{"cpu":"500m","memory":"512Mi"},"requests":{"cpu":"100m","memory":"256Mi"}}}]}}}}
  creationTimestamp: "2026-03-05T18:25:45Z"
  generation: 1
  name: qdrant
  namespace: aiot
  resourceVersion: "802345"
  uid: 5077c281-68cf-48e6-b1a1-cd17cbe90bbc
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: qdrant
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: qdrant
    spec:
      containers:
      - image: qdrant/qdrant:v1.7.4
        imagePullPolicy: IfNotPresent
        name: qdrant
        ports:
        - containerPort: 6333
          protocol: TCP
        - containerPort: 6334
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-03-05T18:25:51Z"
    lastUpdateTime: "2026-03-05T18:25:51Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-03-05T18:25:45Z"
    lastUpdateTime: "2026-03-05T18:25:51Z"
    message: ReplicaSet "qdrant-5f65bcc78" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
