k8s/aiot/deploy-redis-pg-flusher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"redis-pg-flusher"},"name":"redis-pg-flusher","namespace":"aiot"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"redis-pg-flusher"}},"template":{"metadata":{"labels":{"app":"redis-pg-flusher"}},"spec":{"containers":[{"args":["pip install --quiet redis psycopg2-binary \u0026\u0026 python3 /code/flusher.py"],"command":["/bin/sh","-c"],"image":"python:3.11-slim","name":"flusher","resources":{"limi [...]
  creationTimestamp: "2026-03-05T22:45:46Z"
  generation: 2
  labels:
    app: redis-pg-flusher
  name: redis-pg-flusher
  namespace: aiot
  resourceVersion: "1411008"
  uid: 600e13e8-05fa-489b-8b8b-8f848cfb149a
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: redis-pg-flusher
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-03-09T07:21:27Z"
      creationTimestamp: null
      labels:
        app: redis-pg-flusher
    spec:
      containers:
      - args:
        - pip install --quiet redis psycopg2-binary && python3 /code/flusher.py
        command:
        - /bin/sh
        - -c
        image: python:3.11-slim
        imagePullPolicy: IfNotPresent
        name: flusher
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /code
          name: code
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: redis-pg-flusher-code
        name: code
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-03-08T06:14:50Z"
    lastUpdateTime: "2026-03-08T06:14:50Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-03-05T22:45:46Z"
    lastUpdateTime: "2026-03-09T07:21:31Z"
    message: ReplicaSet "redis-pg-flusher-6f54d5d597" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
