k8s/aiot/ss-redpanda.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"name":"redpanda","namespace":"aiot"},"spec":{"podManagementPolicy":"Parallel","replicas":4,"selector":{"matchLabels":{"app":"redpanda"}},"serviceName":"redpanda-headless","template":{"metadata":{"labels":{"app":"redpanda"}},"spec":{"affinity":{"podAntiAffinity":{"preferredDuringSchedulingIgnoredDuringExecution":[{"podAffinityTerm":{"labelSelector":{"matchLabels":{"app":"redpanda"}},"topologyKey":"kubernetes.io/hostn [...]
  creationTimestamp: "2026-03-05T18:35:51Z"
  generation: 1
  name: redpanda
  namespace: aiot
  resourceVersion: "803886"
  uid: 6806d0c9-4fad-45c8-a469-720aa5a90e5b
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: Parallel
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: redpanda
  serviceName: redpanda-headless
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redpanda
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: redpanda
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - command:
        - /bin/bash
        - -c
        - |
          [...]
        image: docker.redpanda.com/redpandadata/redpanda:v24.1.7
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /v1/status/ready
            port: 9644
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        name: redpanda
        ports:
        - containerPort: 9092
          name: kafka
          protocol: TCP
        - containerPort: 33145
          name: rpc
          protocol: TCP
        - containerPort: 9644
          name: admin
          protocol: TCP
        - containerPort: 8082
          name: pandaproxy
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /v1/status/ready
            port: 9644
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/redpanda/data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: local-path
      volumeMode: Filesystem
    status:
      phase: Pending
status:
  availableReplicas: 4
  collisionCount: 0
  currentReplicas: 4
  currentRevision: redpanda-fbcc4f9f5
  observedGeneration: 1
  readyReplicas: 4
  replicas: 4
  updateRevision: redpanda-fbcc4f9f5
  updatedReplicas: 4
