k8s/aiot/ingress-cloudbeaver-tmp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"50m","nginx.ingress.kubernetes.io/proxy-buffer-size":"128k","nginx.ingress.kubernetes.io/proxy-read-timeout":"300"},"name":"cloudbeaver-ingress","namespace":"aiot"},"spec":{"ingressClassName":"nginx","rules":[{"host":"cloudbeaver.34.90.168.150.nip.io","http":{"paths":[{"backend":{"service":{"name":"cloudbeaver","port":{"number":8978}}},"path":"/","pathType":"Prefi [...]
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-expires: "86400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
    nginx.ingress.kubernetes.io/session-cookie-name: CBROUTE
  name: cloudbeaver-ingress
  namespace: aiot
spec:
  ingressClassName: nginx
  rules:
  - host: cloudbeaver.34.90.168.150.nip.io
    http:
      paths:
      - backend:
          service:
            name: cloudbeaver
            port:
              number: 8978
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.164.0.3
