k8s/aiot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
  name: cerebrus-ingress
  namespace: aiot
spec:
  ingressClassName: nginx
  rules:
  - host: cerebrus.34.90.168.150.nip.io
    http:
      paths:
      - backend:
          service:
            name: api-gateway
            port:
              number: 8080
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: CBROUTE
    nginx.ingress.kubernetes.io/session-cookie-expires: "86400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "86400"
  name: cloudbeaver-ingress
  namespace: aiot
spec:
  ingressClassName: nginx
  rules:
  - host: cloudbeaver.34.90.168.150.nip.io
    http:
      paths:
      - backend:
          service:
            name: cloudbeaver
            port:
              number: 8978
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: pgadmin-ingress
  namespace: aiot
spec:
  ingressClassName: nginx
  rules:
  - host: pgadmin.34.90.168.150.nip.io
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-ingress
  namespace: aiot
spec:
  ingressClassName: nginx
  rules:
  - host: rag.34.90.168.150.nip.io
    http:
      paths:
      - backend:
          service:
            name: rag-api-svc
            port:
              number: 7000
        path: /
        pathType: Prefix
